# LEDP

./: .gitignore  CMakeLists.txt  README.md
main/: CMakeLists.txt  led_strip_example_main.c
main/modules/LEDPanel_Driver/: driver.c  driver.h
main/modules/Music_Module/: audio.c  audio.h  fft.c  fft.h  music.c
